--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,8 @@ ext {
     rulesVersion = "1.4.1-alpha03"
     espressoVersion = "3.5.0-alpha03"
     uiAutomatorVersion = "2.2.0"
+
+    robolectricVersion = "4.6.1"
+    extTruthVersion = '1.3.0-rc01'
+    espressoVersion = "3.5.0-alpha03"
 }
